<resources>
    <string name="app_name">SleepEZ</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_sleep">New Sleep</string>
    <string name="stats">Statistics</string>
    <string name="mygoals">My Goals</string>
    <string name="title_activity_goals">GoalsActivity</string>

    <!--Activity Headers-->
    <string name="goals_activity_header">My Goals</string>
    <string name="new_goal_activity_header">New Sleep Goal</string>

    <!--Sub-Headers-->
    <string name="current_goal_header">Current Goal</string>
    <string name="set_goal_title_header">Goal Title</string>
    <string name="set_goal_desc_header">Goal Description</string>

    <!--Button Titles-->
    <string name="newGoal">New Goal</string>
    <string name="set_goal_btn_text">Set Goal</string>

    <!--Colors n' Stuff-->
    <color name="generalBGColor">#606B82</color>

    <!--Dialog Box Strings-->
    <string name="warning_title">Heads Up!</string>
    <string name="warning_message">Creating a new goal will remove your current one, as you can only
        have one active goal at a time</string>
    <string name="warning_positive">Set New Goal</string>
    <string name="warning_negative">Cancel</string>

    <!--Input Boxes-->
    <string name="set_goal_title">Go to Bed Earlier</string>
    <string name="set_goal_desc">Go to bed by 11:30PM everyday</string>

    <string name="menu_info">Info</string>

    <string name="about_sleepEZ"><big><b>What is SleepEZ?</b></big>
    \n
    \n
        This is an app to help users build better sleep habits by providing useful tools to track and analyze personal sleep data.
    \n
    \n
    <b>Activity Options</b>
    \n
    \n
    \u00A0\u00A0● The <b>New Sleep</b> activity allows you to input new sleep data
    \n
    \n
    \u00A0\u00A0● The <b>Statistics</b> activity allows you to view data about your sleep in multiple ways
    \n
    \n
    \u00A0\u00A0● The <b>My Goals</b> activity allows you to set new goals and keep track of progress
    \n
    \n
    </string>

    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>

    <string name="set_wake_button">Set Wake Time</string>
    <string name="set_bed_button">Set Bed Time</string>
    <string name="wake_set_label">Wake Time is:</string>
    <string name="bed_set_label">Bed Time is:</string>
    <string name="time_bed"></string>
    <string name="time_wake"></string>

    <string name="time_picker_example">Time Picker Example</string>
    <string name="time_pick">Pick the time and press save button</string>
    <string name="time_save">Save</string>
    <string name="time_selected"></string>
    <string name="time_current">The Time is:</string>

    <string name="avgBedTime"><u>Average Bed Time</u></string>
    <string name="avgWakeTime"><u>Average Wake Up Time</u></string>
    <string name="avgDuration"><u>Average Sleep Duration</u></string>
    <string name="avgSleepQuality"><u>Average Sleep Quality</u></string>

    <string-array name="stat_select_array">
        <item>Past 3 Days</item>
        <item>Past 7 Days</item>
        <item>Past 14 Days</item>
        <item>Past 30 Days</item>
        <item>All Sleep Data</item>
    </string-array>

    <string name="alreadyBedtime">Already\nBedtime?</string>
    <string name="username">Username</string>
    <string name="userHint">username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="allSleepData">All Sleep Data</string>
    <string name="notes">Notes:</string>
    <string name="cancel">Cancel</string>
    <string name="dontHaveAccount">Don\'t have an account?</string>
    <string name="haveAccount">Already have an account?</string>
    <string name="createAccount">Create Account</string>
    <string name="accountSuccess">Account Successfully Created!</string>
    <string name="logout">Log Out</string>
    <string name="setgoal">Set A Goal</string>
    <string name="creategoal">Create new goal by clicking the "New Goal" button</string>


</resources>