<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/generalBGColor"
    tools:context=".NewGoalActivity">

    <TextView
        android:id="@+id/goals_activity_header_id"
        android:layout_width="309dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/new_goal_activity_header"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="24dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/set_goal_title_header_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_goal_title_header"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/goal_title_input_id"
        app:layout_constraintStart_toStartOf="@+id/goal_title_input_id"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/goal_title_input_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:minWidth="300dp"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/set_goal_desc_header_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_goal_title_header_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/goalTitleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_goal_title"
            android:inputType="text"
            android:maxLines="1"
            android:textColorHint="#B8B8B8" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/set_goal_desc_header_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/set_goal_desc_header"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/goal_desc_input_id"
        app:layout_constraintStart_toStartOf="@+id/goal_desc_input_id"
        app:layout_constraintTop_toBottomOf="@+id/goal_title_input_id" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/goal_desc_input_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:minWidth="300dp"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_line_bottom_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_goal_desc_header_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/goalDescriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_goal_desc"
            android:inputType="text"
            android:maxLines="2"
            android:textColorHint="#B8B8B8" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/horizontal_line_bottom_id"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/set_goal_btn_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/set_goal_btn_id"
        android:layout_width="243dp"
        android:layout_height="58dp"
        android:layout_marginBottom="32dp"
        android:onClick="saveGoalInfo"
        android:text="@string/set_goal_btn_text"
        android:textSize="24sp"
        app:icon="@drawable/pencil_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>